--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "process-keep-alive",
+  "name": "@zero-brazil734/process-keep-alive",
   "version": "0.0.0",
   "description": "A simple module using cluster to force your process running permanently.",
   "main": "index.js",
   "directories": {
     "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Zero-Brazil734/process-keep-alive.git"
   },
   "dependencies": {
     "chalk": "^3.0.0",
@@ -30,5 +34,6 @@
   "bugs": {
     "url": "https://github.com/Zero-Brazil734/process-keep-alive/issues"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/zero-brazil734" },
   "homepage": "https://github.com/Zero-Brazil734/process-keep-alive#readme"
 }
